--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>it's jupiter time!</title>
-        <meta charset="UTF-8">
-        <meta name="author" content="Jupiter">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-
-    <body>
-        hi smirk cat
-    </body>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
