--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>hello</h1>
+<p>so anyways how do we feel about working on the game tonight heart emoji</p>
 </body>
 </html>
