--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>jupiter</title>
         <meta charset="UTF-8">
         <meta name="author" content="Jupiter">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
         <link rel="stylesheet" href="style.css">
   
         <!-- jQuery -->
