--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="author" content="Jupiter">
         <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
         <link rel="stylesheet" href="style.css">
+        <div class="html-mobile-background"></div>
   
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
