--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
         <link rel="stylesheet" href="style.css">
         <div class="html-mobile-background"></div>
-  
+
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </head>
@@ -16,28 +16,28 @@
         <!--top images-->
         <img class="marginauto" src="https://i.redd.it/1ciw2923qbg31.jpg" alt="portfolio painting" width="400" height="250">
         <h1>JUPITER</h1>
-  
+
         <!--hover over contact info-->
         <div class="tooltip" style="position: absolute; top: 0; right: 0; width: 100px; text-align:right;">Contact Info
           <span class="tooltiptext">you can contact me on discord at: jupiter#0098</span>
         </div>
-  
+
         <!--buttons-->
         <div>
           <button class="button button1" id="button1">INTERESTS</button>
           <button class="button button1" id="button2">ABOUT ME</button>
         </div>
-  
+
         <p hidden id="informationDisplayInterests">
-          hi!! some of my interests are: 
+          hi!! some of my interests are:
         </p>
-  
-  
+
+
         <p hidden id="informationDisplayAbout">
         <br>
-          hello! i'm jupiter. 
+          hello! i'm jupiter. i am a 19 year old deaf nb lesbian. i don't know exactly what to put here, to be honest. i'm studying computing science in university (never studied html/css/js though, so please forgive this page being a bit rough around the edges) and i love computers. i'm also pretty absorbed in gaming (pretty twisted of me tbh)
         </p>
-  
+
         <script>
         // on buttonclick
         $("#button1").click(function() {
